Compatibility issue
I noticed on FIrefox, the href tag behaves differently and assumes an inline display if not specified. This prevents it from reading dimensions (in percentage for my case).
The end result was some misaligned content.

To fix this, I used "divs" to wrap the nested elements then placed the href tag as an absolute element.

--- a/Home/Home_style.css
+++ b/Home/Home_style.css
@@ -1090,6 +1090,18 @@ body
     height: 100%;
 }
 
+.mostViewedRankNo1Box .mostViewedRankNo1Link
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+}
+
 .mostViewedRankNo1Box .mostViewedRankNo1ImgBdr
 {
     width: 100%;
@@ -1124,6 +1136,7 @@ body
     width: 100%;
     height: 80px;
     background-color: #000000b2;
+    z-index: 3;
 }
 
 .mostViewedRankNo1DetBdr .mostViewedRankNo1DetBox
